# VehicleRunner

./: .clang-format  .doxygen  .gitignore  CMakeLists.txt  Main.cpp  README.md  VehicleRunner.json  VehicleRunner.service  version.h.in
app/: AppMain.cpp  CMakeLists.txt
app/inc/: AppMain.h  JsonKeys.h
bundle/: CMakeLists.txt  MavVehicle.cpp  MqttClient.cpp  ZmqPublish.cpp  ZmqSubscribe.cpp
bundle/impl/: MavVehicle_Impl.cpp  MavVehicle_Impl.h  MqttClient_Impl.cpp  MqttClient_Impl.h  ZmqPublish_Impl.cpp  ZmqPublish_Impl.h  ZmqSubscribe_Impl.cpp  ZmqSubscribe_Impl.h
bundle/inc/: MavVehicle.h  MqttClient.h  ZmqPublish.h  ZmqSubscribe.h
misc/: CMakeLists.txt  Checksum.cpp
misc/inc/: Checksum.h  Serialization.hpp
misc/msg/: MavMessage.h  MqttMessage.h  ZmqMessage.h
plugin/: CMakeLists.txt  SmallSwarm.cpp
plugin/impl/: SmallSwarm_Impl.cpp  SmallSwarm_Impl.h
plugin/inc/: SmallSwarm.h
